--- a/shared/style.css
+++ b/shared/style.css
@@ -25,3 +25,25 @@ ul{
       max-width:80%;
       margin-left:10%;
 }
+
+textarea{
+    width:20em;
+    height:5em;
+    border: 3px solid #ccc ;
+    padding: 5px;
+    font-family: Tahoma, sans-serif;
+    resize: none;
+}
+
+.error{
+  margin:1em;
+  margin-left:25%;
+  padding: 15px;
+  width:30em;
+  background-color: #f2dede;
+  border-color: #ebccd1;
+  color:#ff4b4a;
+  font-weight:600;
+  font-family:sans-serif;
+  border-radius:5px;
+}
